# 0x000026

./: .gitignore  Cargo.toml  README.md  openfang.toml.example
.github/workflows/: release.yml
agents/engineer/: agent.toml
agents/job-hunter/: agent.toml
agents/orchestrator/: agent.toml
agents/sysadmin/: agent.toml
claudedocs/: research_anti_slop_architecture_audit_2026-03-03.md  workflow_anti_slop_hardening.md
crates/openfang-api/src/: channel_bridge.rs  middleware.rs  routes.rs  server.rs  webchat.rs  ws.rs
crates/openfang-api/static/: index_body.html
crates/openfang-api/static/css/: components.css
crates/openfang-api/static/js/: app.js
crates/openfang-api/static/js/pages/: agents.js  chat.js  quality.js  settings.js  usage.js  vault.js  wizard.js  workflows.js
crates/openfang-channels/src/: bridge.rs  discord.rs  router.rs  telegram.rs  types.rs
crates/openfang-cli/src/: bundled_agents.rs  main.rs
crates/openfang-cli/src/tui/: event.rs  mod.rs
crates/openfang-cli/src/tui/screens/: init_wizard.rs
crates/openfang-desktop/: Cargo.toml
crates/openfang-extensions/src/: registry.rs
crates/openfang-hands/bundled/browser/: HAND.toml
crates/openfang-hands/bundled/job-applier/: HAND.toml  SKILL.md
crates/openfang-hands/bundled/monitor/: HAND.toml  SKILL.md
crates/openfang-hands/src/: bundled.rs  lib.rs  registry.rs
crates/openfang-kernel/: Cargo.toml
crates/openfang-kernel/src/: approval.rs  kernel.rs  lib.rs  metering.rs  registry.rs  task_queue.rs  triggers.rs  wizard.rs  workflow.rs
crates/openfang-memory/: Cargo.toml
crates/openfang-memory/src/: consolidation.rs  knowledge.rs  migration.rs  semantic.rs  session.rs  structured.rs  substrate.rs
crates/openfang-runtime/: Cargo.toml
crates/openfang-runtime/src/: agent_loop.rs  assertions.rs  cli_temp_cleanup.rs  compactor.rs  context_budget.rs  curriculum.rs  embedding.rs  error_compaction.rs  host_functions.rs  kernel_handle.rs  lib.rs  llm_errors.rs  loop_guard.rs  mcp.rs  mcp_auth.rs  mcp_roots.rs  mcp_sampling.rs  mcp_server.rs  model_catalog.rs  model_scoring.rs  pbt.rs  prompt_builder.rs  reflection.rs  routing.rs  sandbox.rs  scratch_pad.rs  self_critique.rs  session_repair.rs  subprocess_sandbox.rs  task_classifier.rs  tool_runner.rs  violation_tracker.rs  watchdog.rs  web_fetch.rs  workspace_sandbox.rs
crates/openfang-runtime/src/drivers/: anthropic.rs  claude_code.rs  fallback.rs  gemini.rs  mod.rs  openai.rs
crates/openfang-skills/bundled/self-check/: SKILL.md
crates/openfang-skills/src/: bundled.rs  clawhub.rs  lib.rs  loader.rs
crates/openfang-types/: Cargo.toml
crates/openfang-types/src/: agent.rs  approval.rs  capability.rs  config.rs  ears.rs  lib.rs  memory.rs  message.rs  model_catalog.rs  violation.rs
deploy/: openfang-user.service
