[package]
name = "openfang-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native desktop application for the OpenFang Agent OS (Tauri 2.0)"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
openfang-kernel = { path = "../openfang-kernel" }
openfang-api = { path = "../openfang-api" }
openfang-types = { path = "../openfang-types" }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-updater = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
open = { workspace = true }

[features]
# Tauri uses custom-protocol in production builds
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "openfang-desktop"
path = "src/main.rs"
